2008-04-11  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* qt4/main_window.cpp:
	* qt4/options.cpp:
	- fixed defects about setting read/write.

	* qt4/main_data.cpp:
	- fixed a defect about a return characther code.

	* qt4/main_window.cpp:
	- added an automatic directry setting to open the output file.

	* qt4/main_data.cpp:
	- implemented automatic file exteantion appending for an output
	file name.

	* qt4/config_dialog.cpp:
	- changed a layout.

	* qt4/config_dialog.h:
	* qt4/field_canvas.cpp:
	* qt4/field_canvas.h:
	* qt4/main_data.cpp:
	- implemented a player selection by mouse clicking.

	* qt4/log_player.cpp:
	* qt4/main_window.cpp:
	* qt4/options.cpp:
	* qt4/qt4.pro:
	* qt4/rcsslogplayer.rc:
	* rcsslogplayer/rcsslogplayer.pro:
	- fixed build problem on Windows.

2008-04-10  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* qt4/log_player_tool_bar.cpp:
	* qt4/main_window.cpp:
	- fixed shortcut keys.

	* qt4/disp_holder.cpp:
	* qt4/log_player.cpp:
	* qt4/main_window.cpp:
	* qt4/monitor_client.cpp:
	* rcsslogplayer/util.cpp:
	* rcsslogplayer/util.h:
	- implemented simple monitor client. Not completed yet.

	* qt4/image_save_dialog.cpp:
	* qt4/image_save_dialog.h:
	* qt4/Makefile.am:
	* qt4/field_canvas.cpp:
	* qt4/main_window.cpp:
	- added some monitor client related code, but not available yet.
	- added an action to print available shortcut keys.

	* qt4/main_window.h:
	* qt4/options.cpp:
	* qt4/qt4.pro:
	- implemented an image save dialog.

	* classic/logplayer.cpp:
	* qt4/Makefile.am:
	* tool/rcg3to4.cpp:
	* tool/rcg4to3.cpp:
	* tool/rcgsplit.cpp:
	- fixed include dependency.

	* qt4/qt4.pro:
	* classic/Makefile.am:
	* classic/logplayer.cpp:
	* configure.ac:
	* qt4/Makefile.am:
	* qt4/team_graphic_painter.cpp:
	* rcsslogplayer/rcsslogplayer.pro:
	* rcsslogplayer/util.cpp:
	- fixed build problem on Mac OS X, but cannot be build by
	Makefile generated by configure. instead of them, use qmake.

2008-04-08  Hidehisa Akiyama  <akky@users.sourceforge.jp>
